# icmc-cc

./: Cargo.toml  README.md  sim.sh
examples/: game.c  test.c  test.mif  test.out  test.out]
src/: gen_asm.rs  gen_ir.rs  gen_x86.rs  irdump.rs  lib.rs  main.rs  parse.rs  preprocess.rs  sema.rs  token.rs
std/: io.asm  io.h  ncurses.asm  ncurses.h  stdio.asm  stdio.h
std_old/: string.h
