[package]
name = "icmc-cc"
version = "0.1.0"
authors = ["Thiago Tavares"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "*"
structopt = "0.3.26"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.92"
fs = { git = "https://github.com/ICMC-IDE/fs.git" }

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
